# ot_harjoitustyo-2021

./: .coveragerc  .gitignore  README.md  tasks.py
dokumentaatio/: arkkitehtuurikuvaus.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
harjoitustyo/: .coverage  pyproject.toml  tasks.py
harjoitustyo/dokumentaatio/: arkkitehtuurikuvaus.md  kaavio.md  tuntikirjanpito.md  vaatimusmaarittely.md
harjoitustyo/src/: gui.py  index.py  locus.py  locus_database.py
harjoitustyo/src/gui/: gui.py  introView.py  mainView.py
harjoitustyo/src/tests/: locus_database_test.py
laskarit/: laskarit_readme.md
laskarit/viikko1/: git_log_tulos.txt  tree_tulos.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: index.py  locus.py  locus_database.py
src/database/: find.py  locus.py  locus_database.py  sample.py
src/gui/: gui.py  introView.py  mainView.py
src/tests/: locus_database_test.py
